# slack-adaptor

./: Cargo.toml  Justfile  build.rs
proto/: slack.proto
src/: client.rs  main.rs  service.rs  slack.rs
test/script/: post.sh
