[package]
name = "slack-adaptor"
version = "0.1.0"
authors = ["Matt Turner <m.turner@mwam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
prost ="0.7"
tonic = "0.4"
reqwest = { version ="0.11", features = ["json"] }
serde = { version = ">1.0.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.4"
